@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.integration.tests;
 
-import com.google.common.collect.ImmutableMap;
 import java.io.File;
 import java.io.InputStream;
 import java.net.URL;
@@ -45,7 +44,7 @@ import org.yaml.snakeyaml.Yaml;
 
 public class SSBQueryIntegrationTest extends BaseClusterIntegrationTest {
   private static final Logger LOGGER = LoggerFactory.getLogger(SSBQueryIntegrationTest.class);
-  private static final Map<String, String> SSB_QUICKSTART_TABLE_RESOURCES = ImmutableMap.of(
+  private static final Map<String, String> SSB_QUICKSTART_TABLE_RESOURCES = Map.of(
       "customer", "examples/batch/ssb/customer",
       "dates", "examples/batch/ssb/dates",
       "lineorder", "examples/batch/ssb/lineorder",
@@ -94,6 +93,7 @@ public class SSBQueryIntegrationTest extends BaseClusterIntegrationTest {
       uploadSegments(tableName, _tarDir);
       // H2
       ClusterIntegrationTestUtils.setUpH2TableWithAvro(Collections.singletonList(dataFile), tableName, _h2Connection);
+      waitForNonZeroDocsLoaded(60_000L, true, tableName);
     }
   }
 
